--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^4.13.6"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seed": "node models/seed.js"
   }
 }
