Added a drop file to drop the seeded products from the database, and a corresponding script to run the file

--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "seed": "node models/seed.js"
+    "seed": "node models/seed.js",
+    "drop": "node models/drop.js"
   }
 }
