--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
+    "passport-local-mongoose": "^4.4.0"
   },
   "scripts": {
     "dev": "nodemon server.js",
