--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,19 @@
     "express": "^4.16.2",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
     "passport-local-mongoose": "^4.4.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "supertest": "^3.0.0"
   },
   "scripts": {
     "dev": "nodemon server.js",
     "seed": "node models/seed.js",
-    "drop": "node models/drop.js"
+    "drop": "node models/drop.js",
+    "test": "mocha test/routes.js"
   }
 }
